--- a/bower.json
+++ b/bower.json
@@ -24,6 +24,7 @@
     "iron-icons": "PolymerElements/iron-icons#~1.0.3",
     "paper-toolbar": "PolymerElements/paper-toolbar#~1.0.4",
     "paper-ripple": "PolymerElements/paper-ripple#~1.0.1",
-    "paper-scroll-header-panel": "PolymerElements/paper-scroll-header-panel#~1.0.6"
+    "paper-scroll-header-panel": "PolymerElements/paper-scroll-header-panel#~1.0.6",
+    "paper-material": "PolymerElements/paper-material#~1.0.1"
   }
 }
