--- a/bower.json
+++ b/bower.json
@@ -25,6 +25,7 @@
     "paper-toolbar": "PolymerElements/paper-toolbar#~1.0.4",
     "paper-ripple": "PolymerElements/paper-ripple#~1.0.1",
     "paper-scroll-header-panel": "PolymerElements/paper-scroll-header-panel#~1.0.6",
-    "paper-material": "PolymerElements/paper-material#~1.0.1"
+    "paper-material": "PolymerElements/paper-material#~1.0.1",
+    "neon-animation": "PolymerElements/neon-animated-pages#~1.0.6"
   }
 }
